fix: Bottom of post border cut off in Yotsuba B theme

--- a/frontend/src/styles/chat-dark.scss
+++ b/frontend/src/styles/chat-dark.scss
@@ -34,5 +34,6 @@
 
   .chatcontrols {
     background: #282828;
+    border-top: 1px solid black;
   }
 }
