--- a/frontend/src/styles/chat-yotsubab.scss
+++ b/frontend/src/styles/chat-yotsubab.scss
@@ -8,6 +8,10 @@
   .post-container {
     padding-left: 2px;
     padding-right: 2px;
+
+    .bottom-spacer {
+      height: 1px;
+    }
   }
 
   .post {
