--- a/frontend/src/styles/room.scss
+++ b/frontend/src/styles/room.scss
@@ -14,7 +14,6 @@
 
   .chat-container {
     flex-shrink: 1;
-    padding: 1px;
     overflow: hidden;
   }
 
